--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Ziadost o Valentinku</title>
+    <title>Valentine</title>
 </head>
 
 <body>
     <div class="container">
         <div class="Mainprompt">
             <img class="image" src="images/catflower.jpg"></img>
-            <h1 class="hh" id="name">Ahoj Princezna!</h1>
-             <p class="pp" id="question">Budes mojou Valentinkou?</p>
+            <h1 class="hh" id="name">Hey Princess!</h1>
+             <p class="pp" id="question">Will you be my Valentine?</p>
             <div class="buttons">
-                <button id="no-button" onclick="showMessage('No')">Nie</button>
-                <button onclick="showMessage('Yes')" id="yesButton">Ano</button>
+                <button id="no-button" onclick="showMessage('No')">NO</button>
+                <button onclick="showMessage('Yes')" id="yesButton">YES</button>
             </div>
             <div class="hidden-message" id="no-message">
-                <p>Dobry pokus ale takto to nepojde</p>
+                <p>Nice try but that's not how it works</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>YAY! Dakujkam</p>
+                <p>YAY! THANK YOU SO MUCH</p>
             </div>
         </div>
     </div>
